# MILO

./: .gitignore  FFPE_rf.joblib  LICENSE  MILO_setup.py  MILO_setup1.py  README.md  pyproject.toml
Notebooks/: Application_of_MILO.ipynb  Evidence_of_stepwise_slippage_events.ipynb  Long_deletion_sig_features_in_shallow_WGS.ipynb  Long_deletion_sigs_discovery_from_DeepSeqData.ipynb
predict_results/: MILO_noise_corrected_profiles.csv  MILO_predictions.csv
src/milo/: __init__.py  cli.py  constants.py  core.py  plots.py  utils.py
src/milo/model_files/: Deep_rf.joblib  FFPE_rf.joblib  FF_rf.joblib
src/milo_mmrd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test_MILO/: FF_rf.joblib  MILO_MMRd_LongDel_intensity.csv  MILO_predictions.csv  MILO_setup.py  MILO_test_data.csv  test_noise.csv
