# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "milo-mmrd"
version = "1.8.0"
authors = [
  { name="Qingli Guo", email="qingliguo@outlook.com" },
]
description = "A tool to predict microsatellite instability using a long-deletion signature."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "joblib==1.2.0",
    "numpy==1.23.5",
    "pandas==2.0.0",
    "matplotlib==3.8.0",
    "seaborn==0.13.2",
    "scipy==1.11.3",
    "scikit-learn==1.3.0"
]

[project.urls]
"Homepage" = "https://github.com/QingliGuo/MILO"
"Bug Tracker" = "https://github.com/QingliGuo/MILO/issues"

[project.scripts]
milo = "milo.cli:main"

# This section is crucial for name normalization
[tool.setuptools]
py-modules = []

# This section tells the builder where to find your package
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
milo = ["model_files/*.joblib"]
